Fix Spacing Issue

--- a/src/components/experience/experience.less
+++ b/src/components/experience/experience.less
@@ -1,48 +1,64 @@
 @import '../../styles.less';
 
 .experience-component-container {
-	display: flex;
-	flex-direction: column;
-	gap: 15px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
 
-	a {
-		text-decoration: none;
-	}
+    a {
+        text-decoration: none;
+    }
 
-	.currently {
-		display: flex;
-		flex-direction: column;
-		gap: 10px;
-	}
+    .currently {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
 
-	.previously {
-		display: flex;
-		flex-direction: column;
-		gap: 10px;
-	}
+    .previously {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
 
-	.title {
-		color: @text-01;
-		font-size: @fontsize-phone-medium;
-		margin-bottom: 0px;
-	}
+    .title {
+        color: @text-01;
+        font-size: @fontsize-phone-medium;
+        margin-bottom: 0px;
+    }
 
-	.experience {
-		color: @text-02;
-		font-size: @fontsize-phone-small;
-	}
+    .experience {
+        color: @text-02;
+        font-size: @fontsize-phone-small;
+    }
+
+    .e-company-link {
+        color: inherit;
+        text-decoration: none;
+        transition: color 0.2s ease;
+    }
+
+    .e-company-link:hover {
+        color: #FFF700;
+        text-decoration: none;
+    }
+
+    .e-company-link:focus-visible {
+        color: #FFF700;
+        text-decoration: none;
+    }
 }
 
 @media (min-width: 1500px) {
-	.experience-component-container {
-		margin-top: 15px;
+    .experience-component-container {
+        margin-top: 15px;
 
-		.title {
-			font-size: @fontsize-phone-large;
-		}
+        .title {
+            font-size: @fontsize-phone-large;
+        }
 
-		.experience {
-			font-size: @fontsize-phone-medium;
-		}
-	}
+        .experience {
+            font-size: @fontsize-phone-medium;
+        }
+    }
 }
