--- a/src/pages/home/home.less
+++ b/src/pages/home/home.less
@@ -31,7 +31,7 @@
 
         .experience-container {
             margin-top: 50px;
-            margin-bottom: 60px;
+            margin-bottom: 70px;
         }
 
         .footer-container {
@@ -94,7 +94,7 @@
         .navbar-container {
             position: fixed;
             left: 60px;
-            margin-top: 360px;
+            margin-top: 380px;
             justify-content: flex-start;
             width: auto;
             max-width: none;
@@ -162,7 +162,7 @@
 
         .navbar-container {
             left: 120px;
-            margin-top: 445px;
+            margin-top: 465px;
         }
 
         .leftright-container {
